VLC Crashes when rewinding (under certain circumstances)
I am using Version 3.0.11 Vetinari (Intel 64bit) to listen to audio files in mp3 and wav format, for transcribing, so I am starting, stopping and rewinding a lot.
The program often freezes during various playhead change conditions. For example when dragging the playhead, clicking the rewind button or using the key commands to rewind from Stop mode, the program freezes on my system (MacOS 10.15.2) and I need to force quit.
It seems to only happen when you I change the playhead position from Stop mode, it has so far never happened during playback.