coreaudio: fix possible freeze after pause, seek, unpause

After a flush, i_first_render_host_time is reset to 0 and i_render_host_time
should not be touched since the playback has not started again yet. This caused
the i_first_render_host_time to be never setup.

Regression from f9fce13591bf3f99c4d9401fe3ba67fb30b0fb75
Fixes #24876